# whole-genome-germline-singlesample-smk

./: .gitignore  links_for_implementing_the_jointgenotype_calling.md  pyproject.toml
config/: config.yml
config.new/: config.yml
profile/new/: config.yaml.new
profile/slurm/: config.yaml
workflow/: Snakefile  Snakefile.new
workflow/rules/: apply_bqsr.smk  base_recalibration.smk  calculate_readgroup_checksum.smk  calibrate_dragen_str_model.smk  check_contamination.smk  check_prevalidation.smk  collect_aggregation_metrics.smk  collect_quality_yield_metrics.smk  collect_raw_wgs_metrics.smk  collect_readgroup_bam_quality_metrics.smk  collect_unsorted_readgroup_bam_quality_metrics.smk  collect_variant_calling_metrics.smk  collect_wgs_metrics.smk  convert_to_cram.smk  cross_check_fingerprints.smk  dragen_hardfilter_gvcf.smk  dragen_index.smk  gather_bqsr_reports.smk  gather_recalibrated_bams.smk  haplotype_caller.smk  import_gvcf.smk  mark_duplicates.smk  merge_bamout.smk  merge_gvcfs.smk  reblock.smk  sample_map.smk  scatter_interval_list.smk  sort_bam.smk  sort_bamout.smk  split_interval_list.smk  template.smk  unmapped_bam.smk  unmapped_bam_to_aligned.smk  validate_gvcf.smk  validate_sam_file.smk
workflow/rules/scripts/: check_contamination.py  scatter_interval_list.py  unmapped_bam.py
