[project]
name = "wgs-smk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.1",
    "python-box>=7.3.2",
    "snakemake>=9.14.5",
    "snakemake-executor-plugin-slurm>=2.0.3",
    "tqdm>=4.67.1",
    "mohd_manifest_cli @ git+https://github.com/christian728504/mohd-manifest-cli.git",
]
